2008-10-05  Richard Hult  <richard@imendio.com>

	* src/ige-conf-gconf.c: Fix build.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-base.c:
	* src/dh-preferences.[ch]:
	* src/dh-window.c: Get rid of dh_preferences_init(), init on
	demand. Rename the conf keys to DH_CONF_*.

2008-10-04  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in: Only depend on gconf on X11.

2008-10-04  Richard Hult  <richard@imendio.com>

	* data/ui/devhelp.glade: Remove the "advanced options"
	preference. Also remove lots of old unused parts, only keep the
	preference dialog.

	* configure.in: Add AC_PROG_OBJC so we can build ObjC sources.

	* src/Makefile.am:
	* src/ige-conf.h:
	* src/ige-conf-gconf.h:
	* src/ige-conf-mac.h: Add tiny layer on top of gconf and
	nsdefaults.

	* src/dh-base.[ch]: Remove gconf client.

	* src/dh-preferences.c:
	* src/dh-search.c:
	* src/dh-window.c: Use the conf abstraction.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_open_new_tab): Fix typo in previous
	commit.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-link.[ch]: Only keep the "leaf" part of the URI in each
	link, and the base part in the book. Construct the full URI on
	demand. This saves lots and lots of allocations and memory.

	* src/dh-book-tree.c: (book_tree_find_uri_foreach):
	* src/dh-parser.c: (parser_start_node_book),
	(parser_start_node_chapter), (parser_start_node_keyword):
	* src/dh-window.c: (window_tree_link_selected_cb),
	(window_search_link_selected_cb): Adapt to the
	above (dh_link_get_uri() now returns allocated memory).

2008-10-04  Richard Hult  <richard@imendio.com>

	Bug 514001 – search results not sorted alphabetically
	
	* src/dh-link.c (dh_link_compare): Don't sort hits after
	book/page.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: Use canonical signal names.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Style cleanup, no functionality changes.
